# web

./: .gitignore  Cargo.toml
.sqlx/: query-9658dd68142cb0fb7d2fbf8dbbb9cf8b0d62a07c294ff97e311aa115d2def7b9.json
db/: Cargo.toml
db/sql/: db.sql
db/src/: main.rs
webservice/: Cargo.toml
webservice/src/app_data/: state.rs
webservice/src/error_handle/: error_handle.rs
webservice/src/handlers/: handlers.rs  mod.rs
webservice/src/handlers/articles/: articles.rs  structs.rs
webservice/src/handlers/courses/: handlers.rs
webservice/src/handlers/user/: user.rs
webservice/src/lib/: lib.rs
webservice/src/models/: course.rs  mod.rs  user.rs
webservice/src/routers/: mod.rs  routers.rs
webservice/tests/: test_handlers.rs
webservice/tests/test_handlers/: mod.rs  test_handler1.rs
